[project]
name = "local-rag-knowledge-assistant"
version = "0.1.0"
description = "Upload notes/docs, chunk them, search relevant passages, and answer questions with citations."
requires-python = ">=3.11"
dependencies = ["fastapi>=0.115", "uvicorn[standard]>=0.30", "python-multipart>=0.0.9"]
[dependency-groups]
dev = ["pytest>=8.0", "httpx>=0.27"]
[tool.pytest.ini_options]
pythonpath = ["."]

[project.optional-dependencies]
ollama = ["ollama"]
